Arreglat typo on els corol·laris es menjaven

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -103,7 +103,7 @@
 		\begin{solution}
 			Observem que si \(\alpha\leq0\) tenim que
 			\[\lim_{n\to\infty}\frac{1}{n^{\alpha}}=\infty\]
-			i pel \corollari \myref{cor:condició de Cauchy} tenim que la sèrie és divergent.
+			i pel \corollari{} \myref{cor:condició de Cauchy} tenim que la sèrie és divergent.
 			
 			Suposem que \(0<\alpha\leq1\). Definim la successió
 			\[S_{N}=\sum_{n=1}^{N}\frac{1}{n^{\alpha}}\]
@@ -635,7 +635,7 @@
 		\begin{solution}
 			Si \(\alpha\leq0\) tenim que el límit
 			\[\lim_{n\to\infty}\frac{(-1)^{n}}{n^{\alpha}}\]
-			és divergent, i pel \corollari \myref{cor:terme general tendeix a zero en una sèrie convergent} trobem que la sèrie és divergent.
+			és divergent, i pel \corollari{} \myref{cor:terme general tendeix a zero en una sèrie convergent} trobem que la sèrie és divergent.
 			
 			Estudiem ara el cas \(\alpha>0\). Si denotem
 			\[a_{n}=\frac{1}{n^{\alpha}}\]
@@ -906,7 +906,7 @@
 		\begin{proof}
 			Per la definició de \myref{def:convergència absoluta d'una sèrie} tenim que la sèrie
 			\[\sum_{n=0}^{\infty}\abs{a_{n}}\]
-			és convergent, i pel \corollari \myref{cor:la reordenada d'una sèrie de termes positius convergent conserva la sèrie} trobem que
+			és convergent, i pel \corollari{} \myref{cor:la reordenada d'una sèrie de termes positius convergent conserva la sèrie} trobem que
 			\[\sum_{n=0}^{\infty}\abs{a_{\sigma(n)}}=\sum_{n=0}^{\infty}\abs{a_{n}},\]
 			i per tant tenim que \(\sum_{n=0}^{\infty}a_{\sigma(n)}\) és absolutament convergent.
 		\end{proof}
@@ -1005,7 +1005,7 @@
 				&\geq\alpha-a^{-}_{m_{i}}.
 			\end{align*}
 			
-			Ara bé, tenim per hipòtesi que la sèrie \(\sum_{n=0}^{\infty}a_{n}\) és convergent, i pel \corollari \myref{cor:terme general tendeix a zero en una sèrie convergent} tenim que \(\lim_{n\to\infty}a_{n}=0\), i per tant \(\lim_{n\to\infty}a^{-}_{n}=0\), i pel \myref{thm:sandvitx} trobem que
+			Ara bé, tenim per hipòtesi que la sèrie \(\sum_{n=0}^{\infty}a_{n}\) és convergent, i pel \corollari{} \myref{cor:terme general tendeix a zero en una sèrie convergent} tenim que \(\lim_{n\to\infty}a_{n}=0\), i per tant \(\lim_{n\to\infty}a^{-}_{n}=0\), i pel \myref{thm:sandvitx} trobem que
 			\[\lim_{i\to\infty}S_{n_{i}}-T_{m_{i}}=\alpha.\qedhere\]
 		\end{proof}
 	\end{theorem}
@@ -1362,7 +1362,7 @@
 		\[\limsup_{n\to\infty}a_{n}=\lim_{n\to\infty}b_{n}\quad\text{i}\quad\liminf_{n\to\infty}a_{n}=\lim_{n\to\infty}c_{n}\]
 		com el límit superior i límit inferior de \((a_{n})\).
 		
-		Aquesta definició té sentit pel lema \myref{lema:les successions creixents tenen límit i aquest és el suprem de la successió} i el \corollari \myref{cor:les successions decreixent tenen límit i aquest és el ínfim de la successió}.
+		Aquesta definició té sentit pel lema \myref{lema:les successions creixents tenen límit i aquest és el suprem de la successió} i el \corollari{} \myref{cor:les successions decreixent tenen límit i aquest és el ínfim de la successió}.
 	\end{definition}
 	\begin{theorem}
 		\label{thm:radi de convergència d'una sèrie de potències}
@@ -1747,7 +1747,7 @@
 			\(\sqrt{\uppi}\). %TODO
 		\end{solution}
 	\end{example}
-	% Buscar un exemple sabroso a \url{http://www.math.uconn.edu/~kconrad/blurbs/analysis/diffunderint.pdf} per acabar tot aquest tema a lo grande.
+	%TODO Buscar un exemple sabroso a \url{http://www.math.uconn.edu/~kconrad/blurbs/analysis/diffunderint.pdf} per acabar tot aquest tema a lo grande.
 	\chapter{Sèries de Fourier}
 	\section{Funcions periòdiques}
 %	\subsection{Els nombres complexos}
