--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -293,7 +293,7 @@
 			i per la definició de \myref{def:límit} tenim que existeix un natural \(n_{0}\) tal que per a tot \(n>n_{0}\) es satisfà
 			\[0<{\frac{K^{m}}{m!}\abs{t-t_{0}}^{m}}<1.\]
 			
-			Per tant, per la definició d'\myref{def:aplicació contractiva} tenim que per a tot \(n>n_{0}\) l'aplicació \(T^{n}\) és una aplicació contractiva, i pel \corollari \myref{cor:si una funció té una potència contractiva aleshores aquesta té un únic punt fix} tenim que existeix una única funció \(u\) de \(X\) tal que
+			Per tant, per la definició d'\myref{def:aplicació contractiva} tenim que per a tot \(n>n_{0}\) l'aplicació \(T^{n}\) és una aplicació contractiva, i pel \corollari{} \myref{cor:si una funció té una potència contractiva aleshores aquesta té un únic punt fix} tenim que existeix una única funció \(u\) de \(X\) tal que
 			\[T(u(t))=u(t).\qedhere\]
 		\end{proof}
 	\end{theorem}
