Arreglat espaiat al criteri de Rabbe

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -340,10 +340,10 @@
 			\end{equation}
 			Podem aplicar la desigualtat \eqref{prop:criteri de Raabe:eq1} recursivament per obtenir
 			\begin{align*}
-				a_{n+1}<&a_{n}\left(\frac{n}{n+1}\right)^{L-\varepsilon}\\
-				<&a_{n-1}\left(\frac{n-1}{n}\frac{n}{n+1}\right)^{L-\varepsilon}\\
-				&\vdots\\
-				<&a_{n_{0}}\left(\frac{n_{0}}{n_{0}+1}\frac{n_{0}+1}{n_{0}+2}\dots\frac{n-1}{n}\frac{n}{n+1}\right)^{L-\varepsilon}
+				a_{n+1}&<a_{n}\left(\frac{n}{n+1}\right)^{L-\varepsilon}\\
+				&<a_{n-1}\left(\frac{n-1}{n}\frac{n}{n+1}\right)^{L-\varepsilon}\\
+				&\quad\vdots\\
+				&<a_{n_{0}}\left(\frac{n_{0}}{n_{0}+1}\frac{n_{0}+1}{n_{0}+2}\dots\frac{n-1}{n}\frac{n}{n+1}\right)^{L-\varepsilon}
 			\end{align*}
 			i per tant trobem
 			\[a_{n+1}<a_{n_{0}}\left(\frac{n_{0}}{n+1}\right)^{L-\varepsilon},\]
