--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -6,7 +6,7 @@
 	\subsection{Convergència d'una sèrie numèrica}
 	\begin{definition}[Sèrie numèrica]
 		\labelname{sèrie numèrica}\label{def:sèrie numèrica}
-		Sigui \((a_{n})\) una successió de nombres reals. Aleshores direm que
+		Sigui \((a_{n})_{n\in\mathbb{N}}\) una successió de nombres reals. Aleshores direm que
 		\[\sum_{n=1}^{\infty}a_{n}=a_{1}+a_{2}+a_{3}+\cdots\]
 		és una sèrie numèrica o la sèrie de \((a_{n})\).
 	\end{definition}
