--- a/parts/AlgebraLineal.tex
+++ b/parts/AlgebraLineal.tex
@@ -87,7 +87,7 @@
 		0 & \cdots & 0
 		\end{matrix}\right]
 		\in M_{m\times n}(\mathbb{K})\]
-		com \(0_{m\times n}\), ó \(0\) si és clar pel context.
+		com \(0_{m\times n}\), ó \(0\) si és clar pel context. També escriurem \(0_{n\times n}=0_{n}\).
 	\end{notation}
 	\begin{proposition}
 		\label{prop:element neutre per la suma de matrius}
@@ -297,7 +297,7 @@
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}
-		\label{prop:inversa de l'inversa d'una matriu és la matriu}
+		\label{prop:inversa de la inversa d'una matriu és la matriu}
 		Sigui \(A\) una matriu invertible d'ordre \(n\) sobre un cos \(\mathbb{K}\). Aleshores
 		\[(A^{-1})^{-1}=A.\]
 		\begin{proof}
