--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -129,7 +129,7 @@
 			\end{align*}
 			i de manera anàloga trobem
 			\[(a\ast b)\ast(b^{-1}\ast a^{-1})=e.\]
-			Així doncs, per la proposició \myref{prop:unicitat inversa en grups} tenim que \(a\ast b\) és l'inversa de \(b^{-1}\ast a^{-1}\), és a dir
+			Així doncs, per la proposició \myref{prop:unicitat inversa en grups} tenim que \(a\ast b\) és la inversa de \(b^{-1}\ast a^{-1}\), és a dir
 			\[(a\ast b)^{-1}=b^{-1}\ast a^{-1}.\qedhere\]
 		\end{proof}
 	\end{proposition}
