--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -429,7 +429,7 @@
 	\end{theorem}
 	\begin{notation}
 		\label{notation:aplicació identitat}
-		Aprofitant el Teorema \myref{thm:unicitat de les inverses de les aplicacions bijectives} denotarem l'inversa d'una aplicació \(f:A\rightarrow B\) amb \(f^{-1}\), i per tant definim l'aplicació
+		Aprofitant el Teorema \myref{thm:unicitat de les inverses de les aplicacions bijectives} denotarem la inversa d'una aplicació \(f:A\rightarrow B\) amb \(f^{-1}\), i per tant definim l'aplicació
 		\[f^{-1}\circ f=\Id_{A}.\]
 		
 		Aleshores tenim que \(Id_{A}\colon A\rightarrow A\) és l'aplicació bijectiva i satisfà \(Id_{A}(a)=a\) per a tot \(a\in A\).
@@ -454,7 +454,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{corollary}
-		\label{cor:l'inversa d'una aplicació invertible és invertible}
+		\label{cor:la inversa d'una aplicació invertible és invertible}
 		Si \(f\) és invertible aleshores \(f^{-1}\) és invertible i \(\left(f^{-1}\right)^{-1}=f\).
 	\end{corollary}
 	\section{Relacions d'equivalència}
@@ -1094,7 +1094,7 @@
 			Prenem un enter \(c\) tal que \(c\divides a\) i \(c\divides b\). Aleshores per la proposició \myref{prop:divisors divideixen el divident escalat} tenim que \(c\) divideix \(-\lambda b\), i per la proposició \myref{prop:un divisor divideix la suma o la resta dels seus dividents} trobem que \(c\divides a-\lambda b\), i per la definició de \myref{def:màxim comú divisor} tenim que, efectivament, \(\mcd(a,b)=\mcd(a-\lambda b,b)\).
 		\end{proof}
 	\end{proposition}
-	\subsection{La divisió euclidiana i l'identitat de Bézout}
+	\subsection{La divisió euclidiana i la identitat de Bézout}
 	\begin{lemma}
 		\label{lema:criteri de divisibilitat d'Euclides}
 		Siguin \(D\) i \(d\) nombres enters amb \(D,d>0\). Aleshores existeixen dos únics \(q\), \(r\) enters tals que
