--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -165,7 +165,7 @@
 				&\leq
 				 k^{n}(\distancia(T^{r}(x),T^{r-1}(x))+\distancia(T^{r-1}(x),T^{r-2}(x))+\dots\\
 				&\quad\dots+\distancia(T(x),x))\\
-				&k^{n}\left(k^{r-1}\distancia(T(x),x)+k^{r-2}\distancia(T(x),x)+\dots+\distancia(T(x),x)\right)\\
+				&\leq k^{n}\left(k^{r-1}\distancia(T(x),x)+k^{r-2}\distancia(T(x),x)+\dots+\distancia(T(x),x)\right)\\
 				&=k^{n}(1+k+k^{2}+\dots+k^{r+1})\distancia(T(x),x)\\
 				&<\frac{k^{n}}{1-k}\distancia(T(x),x).\tag{\myref{ex:sèries geomètriques}}
 			\end{align*}
@@ -323,20 +323,20 @@
 		\[\norm{f(y)-f(x)}<\varepsilon.\]
 		Aleshores direm que \(H\) és equicontínua en \(x\). Si \(H\) és equicontínua en \(x\) per a tot \(x\) de \(X\) direm que \(H\) és equicontínua en \(X\).
 	\end{definition}
-	\begin{lemma}[Teorema de Arzelà-Ascoli]
-		\labelname{Teorema de Arzelà-Ascoli}\label{thm:Teorema de Arzelà-Ascoli}\label{lema:Teorema de Peano}
+	\begin{lemma}[Teorema d'Arzelà-Ascoli]
+		\labelname{Teorema d'Arzelà-Ascoli}\label{thm:Teorema d'Arzelà-Ascoli}
 		Siguin \(X\) un compacte i \((f_{n})_{n\in\mathbb{N}}\) una successió de funcions de \(\mathcal{C}_{b}(X,T)\) equicontínua i puntualment acotada. Aleshores la successió \((f_{n})_{n\in\mathbb{N}}\) té una parcial acotada.
 		\begin{proof}
 			Prenem un real \(\varepsilon>0\). Per la definició de \myref{def:família de funcions equicontínua} tenim que per a tot punt \(x\) de \(X\) existeix un entorn \(N_{x}\) de \(x\) tal que per a tot \(y\) de \(N_{x}\) tenim, per a tot \(n\) natural, que
 			\[\norm{f_{n}(y)-f_{n}(x)}<\frac{\varepsilon}{3}.\]
 			Ara bé, per la definició d'\myref{def:entorn} tenim que existeix un obert \(\obert{V}_{x}\) de \(X\) tal que \(x\) és un element de \(\obert{V}_{x}\) i \(\obert{V}_{x}\) és un subconjunt de \(N_{x}\). Per tant tenim que per a tot \(y\) de \(\obert{V}_{x}\), per a tot \(n\) natural, es satisfà
 			\begin{equation}
-				\label{thm:Teorema de Arzelà-Ascoli:eq2}
+				\label{thm:Teorema d'Arzelà-Ascoli:eq2}
 				\norm{f_{n}(y)-f_{n}(x)}<\frac{\varepsilon}{3}.
 			\end{equation}
 			També tenim, per hipòtesi, que \(X\) és compacte, i per tant existeix una família \(\{x_{i}\}_{i=1}^{k}\) de punts de \(X\) tals que
 			\begin{equation}
-				\label{thm:Teorema de Arzelà-Ascoli:eq1}
+				\label{thm:Teorema d'Arzelà-Ascoli:eq1}
 				X=\bigcup_{i=1}^{k}\obert{V}_{x_{i}}.
 			\end{equation}
 			
@@ -346,26 +346,26 @@
 			\[(f^{k}_{n}(x_{i}))_{n\in\mathbb{N}}\quad\text{per a tot }i\text{ de }\{1,\dots,k\}.\]
 			Tenim que la successió \((f^{k}_{n}(x_{i}))_{n\in\mathbb{N}}\) és convergent. Per tant, per la definició de \myref{def:límit} trobem que existeix un element de \(X\), \(f^{k}(x_{i})\) tal que existeix un natural \(n'_{\varepsilon}\) satisfent que per a tot \(n>n'_{\varepsilon}\) es compleix
 			\begin{equation}
-				\label{thm:Teorema de Arzelà-Ascoli:eq3}
+				\label{thm:Teorema d'Arzelà-Ascoli:eq3}
 				\norm{f^{k}_{n}(x_{i})-f^{k}(x_{i})}<\frac{\varepsilon}{6},
 			\end{equation}
 			per tant trobem, si \(m>n\) i \(n>n'_{\varepsilon}\), que
 			\begin{align*}
 				\norm{f^{k}_{n}(x_{i})-f^{k}_{m}(x_{i})}&\leq\norm{f^{k}_{n}(x_{i})-f^{k}(x_{i})}+\norm{f^{k}(x_{i})-f^{k}_{m}(x_{i})} \\
-				&\leq\frac{\varepsilon}{6}+\frac{\varepsilon}{6} \tag{\ref{thm:Teorema de Arzelà-Ascoli:eq3}}
+				&\leq\frac{\varepsilon}{6}+\frac{\varepsilon}{6} \tag{\ref{thm:Teorema d'Arzelà-Ascoli:eq3}}
 			\end{align*}
 			i per tant
 			\begin{equation}
-				\label{thm:Teorema de Arzelà-Ascoli:eq4}
+				\label{thm:Teorema d'Arzelà-Ascoli:eq4}
 				\norm{f^{k}_{n}(x_{i})-f^{k}_{m}(x_{i})}\leq\frac{\varepsilon}{3}.
 			\end{equation}
 			
-			Prenem ara un element \(x\) de \(X\). Per \eqref{thm:Teorema de Arzelà-Ascoli:eq1} tenim que existeix un \(j\) de \(\{1,\dots,k\}\) tal que \(x\) és un element de \(V_{x_{j}}\), i tenim que
+			Prenem ara un element \(x\) de \(X\). Per \eqref{thm:Teorema d'Arzelà-Ascoli:eq1} tenim que existeix un \(j\) de \(\{1,\dots,k\}\) tal que \(x\) és un element de \(V_{x_{j}}\), i tenim que
 			\begin{align*}
 				\norm{f^{k}_{n}(x)-f^{k}_{m}(x)}\leq&\norm{f^{k}_{n}(x)-f^{k}_{n}(x_{j})}+\norm{f^{k}_{n}(x_{j})-f^{k}_{m}(x)} \\
 				\leq&\norm{f^{k}_{n}(x)-f^{k}_{n}(x_{j})}+\norm{f^{k}_{n}(x_{j})-f^{k}_{m}(x_{j})}+\\&+\norm{f^{k}_{m}(x_{j})-f^{k}_{m}(x)} \\
-				\leq&\frac{\varepsilon}{3}+\norm{f^{k}_{n}(x_{j})-f^{k}_{m}(x_{j})}+\frac{\varepsilon}{3}\tag{\ref{thm:Teorema de Arzelà-Ascoli:eq2}} \\
-				\leq&\frac{\varepsilon}{3}+\frac{\varepsilon}{3}+\frac{\varepsilon}{3}=\varepsilon\tag{\ref{thm:Teorema de Arzelà-Ascoli:eq4}}
+				\leq&\frac{\varepsilon}{3}+\norm{f^{k}_{n}(x_{j})-f^{k}_{m}(x_{j})}+\frac{\varepsilon}{3}\tag{\ref{thm:Teorema d'Arzelà-Ascoli:eq2}} \\
+				\leq&\frac{\varepsilon}{3}+\frac{\varepsilon}{3}+\frac{\varepsilon}{3}=\varepsilon\tag{\ref{thm:Teorema d'Arzelà-Ascoli:eq4}}
 			\end{align*}
 			Tenim doncs que per a tot \(\varepsilon>0\) real existeix una parcial \((g^{(\varepsilon)}_{n'_{\varepsilon}+n})_{n\in\mathbb{N}}\) de \((f_{n})_{n\in\mathbb{N}}\) que satisfà
 			\[\norm{g^{(\varepsilon)}_{n'_{\varepsilon}+n}-g^{(\varepsilon)}_{n'_{\varepsilon}+m}}\leq\varepsilon\]
@@ -503,14 +503,14 @@
 		\label{lema:continuitat respecte les condicions inicials}
 		Sigui \((\varphi_{n})_{n\in\mathbb{N}}\) una successió uniformement equicontínua i uniformement acota de funcions contínues reals sobre un espai mètric compacte \(F\) tal que tota parcial uniformement convergent de la successió té per límit una funció \(\varphi\). Aleshores la successió \((\varphi_{n})\) convergeix uniformement a \(\varphi\).
 		\begin{proof}
-			Suposem que la successió \((\varphi_{n})_{n\in\mathbb{N}}\) no convergeix uniformement a \(\varphi\). Per la definició de \myref{def:límit} tenim que existeix un \(\varepsilon>0\) tal que per a tot \(N\) natural existeix un \(n_{N}>N\) tal que
+			Suposem que la successió \((\varphi_{n})_{n\in\mathbb{N}}\) no convergeix uniformement a \(\varphi\). Per la definició d'\myref{def:límit} tenim que existeix un \(\varepsilon>0\) tal que per a tot \(N\) natural existeix un \(n_{N}>N\) tal que
 			\[\norm{\varphi_{n_{N}}-\varphi}\geq\varepsilon.\]
 			Per tant podem construir una successió \((\varphi_{n_{N}})_{N\in\mathbb{N}}\) tal que
 			\begin{equation}
 				\label{lema:continuitat respecte les condicions inicials:eq1}
 				\norm{\varphi_{n_{N}}-\varphi}\geq\varepsilon
 			\end{equation}
-			per a tot \(N\) natural. Ara bé, pel \myref{thm:Teorema de Arzelà-Ascoli} la successió \((\varphi_{n_{N}})_{N\in\mathbb{N}}\) té una parcial uniformement convergent, que contradiu \eqref{lema:continuitat respecte les condicions inicials:eq1}. Per tant tenim que la successió \((\varphi_{n})\) convergeix uniformement a \(\varphi\).
+			per a tot \(N\) natural. Ara bé, pel \myref{thm:Teorema d'Arzelà-Ascoli} la successió \((\varphi_{n_{N}})_{N\in\mathbb{N}}\) té una parcial uniformement convergent, que contradiu \eqref{lema:continuitat respecte les condicions inicials:eq1}. Per tant tenim que la successió \((\varphi_{n})\) convergeix uniformement a \(\varphi\).
 		\end{proof}
 	\end{lemma}
 	\begin{definition}[Convergència uniforme sobre compactes]
