Arreglats alguns errors petits

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -43,10 +43,10 @@
 			\end{align*}
 			i trobem
 			\begin{equation*}
-				\sum_{n=0}^{N}r^{n}=\frac{1-r^{N+1}}{1-r}
+				\sum_{n=0}^{N}r^{n}=\frac{1-r^{N+1}}{1-r}.
 			\end{equation*}
-			Ara bé, tenim
-			\[\lim_{N\to\infty}\frac{1-r^{N+1}}{1-r}=
+			Per tant tenim
+			\[\lim_{N\to\infty}\sum_{n=0}^{N}r^{n}=
 			\begin{cases}
 				\displaystyle \frac{1}{1-r} & \text{si }-1<r<1 \\
 				+\infty & \text{si }r\geq1 \\
