--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1433,7 +1433,7 @@
 		Aleshores
 		\[a+b\equiv a'+b'\pmod{m}\quad\text{i}\quad ab\equiv a'b'\pmod{m}.\]
 		\begin{proof}
-			Per la definició d'\myref{def:nombres modulars congruents} tenim que existeixen enters \(\lambda\) i \(\mu\) tals que \(a-a'=\lambda m\) i \(b-b'=\mu m\). Per tant
+			Per la definició de \myref{def:nombres modulars congruents} tenim que existeixen enters \(\lambda\) i \(\mu\) tals que \(a-a'=\lambda m\) i \(b-b'=\mu m\). Per tant
 			\begin{align*}
 			(a+b)-(a'-b')&=(a-a')+(b-b')\\
 			&=\lambda m+\mu m\\
