--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -564,7 +564,7 @@
 		\begin{proof}
 			Definim el conjunt
 			\[A=\{n\in\mathbb{N}\mid R(n)\text{ és falsa}\}.\]
-			Per la definició de \myref{def:subconjunt} tenim que \(A\subseteq\mathbb{N}\). Suposem que \(A\) és un conjunt no buit. Aleshores pel \myref{thm:primer element} tenim que existeix un primer element \(a\) de \(A\). Ara bé, pel punt \myref{enum:thm:principi d'inducció 1} tenim que \(a\neq1\). Per tant, pel lema \myref{lema:primer element} tenim que \(a=S(b)\) per a cert \(b\in\mathbb{N}\). Ara bé, com que \(a\) és el primer element de \(A\), per la definició de \myref{def:primer element} tenim que \(b\notin A\), i per tant \(P(b)\) és vertadera. Ara bé, pel punt \myref{enum:thm:principi d'inducció 2} tenim que \(P(S(b))=P(a)\) és vertadera, i per tant \(a\notin A\), arribant a contradicció. Per tant trobem que \(A\) és el conjunt buit, i trobem que \(R(n)\) és vertadera per a tot \(n\in\mathbb{N}\), com volíem veure.
+			Per la definició de \myref{def:subconjunt} tenim que \(A\subseteq\mathbb{N}\). Suposem que \(A\) és un conjunt no buit. Aleshores pel \myref{thm:primer element} tenim que existeix un primer element \(a\) de \(A\). Ara bé, pel punt \eqref{enum:thm:principi d'inducció 1} tenim que \(a\neq1\), per tant, pel lema \myref{lema:primer element} tenim que \(a=S(b)\) per a cert \(b\in\mathbb{N}\). Com que \(a\) és el primer element de \(A\), per la definició de \myref{def:primer element} tenim que \(b\notin A\), i per tant \(P(b)\) és vertadera. Ara bé, pel punt \eqref{enum:thm:principi d'inducció 2} tenim que \(P(S(b))=P(a)\) és vertadera, i per tant \(a\notin A\), arribant a contradicció. Per tant trobem que \(A\) és el conjunt buit, i trobem que \(R(n)\) és vertadera per a tot \(n\in\mathbb{N}\).
 		\end{proof}
 	\end{theorem}
 	\subsection{Operacions sobre els nombres naturals} % https://math.stackexchange.com/questions/60432/how-to-prove-cancellation-property-of-integer-multiplication?rq=1
