--- a/Apunts.tex
+++ b/Apunts.tex
@@ -163,10 +163,6 @@
 \newcommand{\corollari}{coro{\lgem}ari}
 \newcommand{\Corollari}{Coro{\lgem}ari}
 
-\newlength{\ample}
-\setlength{\ample}{1.5pt}
-\newlength{\ampledashed}
-\setlength{\ampledashed}{1.2pt}
 \newcommand{\anglelogos}{337.5}
 
 \newcommand*{\titleTMB}{\begingroup% Three Men in a Boat
@@ -235,41 +231,41 @@
 		\tkzFillCircle[color = black](O,Alluny)
 		\tkzFillCircle[color = white](O,A)
 				
-		\tkzDrawPoints[shape=circle,color=black,fill=black](E,M)
+		\tkzDrawPoints[shape=cross,color=black](E,M)
 		
-		\tkzDrawSegment[line width=\ample](P9,F)
-		\tkzDrawSegment[line width=\ample](P7,F)
-		\tkzDrawSegment[line width=\ample](P4,F)
-		\tkzDrawSegment[line width=\ample](P1,F)
+		\tkzDrawSegment(P9,F)
+		\tkzDrawSegment(P7,F)
+		\tkzDrawSegment(P4,F)
+		\tkzDrawSegment(P1,F)
 		
-		\tkzDrawSegment[line width=\ample](F,A)
-		\tkzDrawSegment[line width=\ample](A2,A)
-		\tkzDrawSegment[line width=\ample](D2,D)
+		\tkzDrawSegment(F,A)
+		\tkzDrawSegment(A2,A)
+		\tkzDrawSegment(D2,D)
 		
-		\tkzDrawSegment[line width=\ample](P_{3},P_{14})
-		\tkzDrawSegment[line width=\ample](P_{14},P_{3})
-		\tkzDrawSegment[line width=\ample](P_{3},A2)
+		\tkzDrawSegment(P_{3},P_{14})
+		\tkzDrawSegment(P_{14},P_{3})
+		\tkzDrawSegment(P_{3},A2)
 		
-		\tkzDrawCircle[line width=\ample](M,H)
-		\tkzDrawCircle[line width=\ample](G',J)
+		\tkzDrawCircle(M,H)
+		\tkzDrawCircle(G',J)
 		
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{3},P_{0})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{6},P_{3})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{9},P_{6})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{12},P_{9})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{15},P_{12})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{1},P_{15})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{4},P_{1})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{7},P_{4})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{10},P_{7})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{13},P_{10})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{16},P_{13})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{2},P_{16})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{5},P_{2})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{8},P_{5})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{11},P_{8})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{14},P_{11})
-		\tkzDrawSegment[line width=\ampledashed, dashed](P_{0},P_{14})
+		\tkzDrawSegment[dashed](P_{3},P_{0})
+		\tkzDrawSegment[dashed](P_{6},P_{3})
+		\tkzDrawSegment[dashed](P_{9},P_{6})
+		\tkzDrawSegment[dashed](P_{12},P_{9})
+		\tkzDrawSegment[dashed](P_{15},P_{12})
+		\tkzDrawSegment[dashed](P_{1},P_{15})
+		\tkzDrawSegment[dashed](P_{4},P_{1})
+		\tkzDrawSegment[dashed](P_{7},P_{4})
+		\tkzDrawSegment[dashed](P_{10},P_{7})
+		\tkzDrawSegment[dashed](P_{13},P_{10})
+		\tkzDrawSegment[dashed](P_{16},P_{13})
+		\tkzDrawSegment[dashed](P_{2},P_{16})
+		\tkzDrawSegment[dashed](P_{5},P_{2})
+		\tkzDrawSegment[dashed](P_{8},P_{5})
+		\tkzDrawSegment[dashed](P_{11},P_{8})
+		\tkzDrawSegment[dashed](P_{14},P_{11})
+		\tkzDrawSegment[dashed](P_{0},P_{14})
 		
 		\fontsize{23.5}{23.5}\selectfont
 		\path [postaction={decorate,decoration={text along path, 
