Actualització del pdf

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -126,6 +126,7 @@
 	\DeclareMathOperator{\ker}{ker}
 \DeclareMathOperator{\Ima}{Im}
 \DeclareMathOperator{\Antiima}{\Ima^{-1}}
+\DeclareMathOperator{\cosdefraccions}{Q}
 
 \DeclareMathOperator*{\suport}{Supp}
 
