--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -1534,7 +1534,7 @@
 		\[L=\lim_{x\to b}\frac{f(x)}{g(x)}\]
 		tals que
 		\begin{enumerate}
-			\item\label{def:criteri de comapració d'integrals impròpies:eq1} \(L\neq\) i \(L\neq\infty\). Aleshores \(\int_{a}^{b}f(x)\diff x\) és convergent si i només si \(\int_{a}^{b}g(x)\diff x\) és convergent.
+			\item\label{def:criteri de comapració d'integrals impròpies:eq1} \(L\neq0\) i \(L\neq\infty\). Aleshores \(\int_{a}^{b}f(x)\diff x\) és convergent si i només si \(\int_{a}^{b}g(x)\diff x\) és convergent.
 			\item\label{def:criteri de comapració d'integrals impròpies:eq2} \(L=0\) i \(\int_{a}^{b}g(x)\diff x\) és convergent. Aleshores \(\int_{a}^{b}f(x)\diff x\) és convergent.
 			\item\label{def:criteri de comapració d'integrals impròpies:eq3} \(L=\infty\) i \(\int_{a}^{b}f(x)\diff x\) és convergent. Aleshores \(\int_{a}^{b}g(x)\diff x\) és convergent.
 		\end{enumerate}
