Arreglats pocs errors a cdvo i anàlisi, i començats EDOS2 i geometria diferencial

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -395,6 +395,10 @@
 		\subfile{parts/Topologia.tex}
 	\part{Equacions diferencials ordinàries I}
 		\subfile{parts/EDOS1.tex}
+	\part{Geometria diferencial}
+		\subfile{parts/GeoDiferencial.tex}
+	\part{Equacions diferencials ordinàries II}
+		\subfile{parts/EDOS2.tex}
 \end{document} %WEB TO' MOLONA: http://www-history.mcs.st-and.ac.uk/BiogIndex.html
 
 % Definir commanda per [x] i canviar-les totes. Potser amb paràmetres (per barra, claudators i superíndexos) Potser dues commandes per overline i claudators
