--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -216,6 +216,8 @@
 		\end{proof}
 	\end{corollary}
 	\section{Teoremes d'existència i unicitat}
+	\subsection{Problema de Cauchy}
+	Definicions d'equació diferencial, problema de Cauchy, exemples...
 	\subsection{El Teorema de Picard}
 	\begin{definition}[Funció Lipschitz respecte la segona variable]
 		\labelname{funció Lipschitz respecte la segona variable}\label{def:funció Lipschitz respecte la segona variable}
@@ -223,6 +225,13 @@
 		\[\norm{f(t,x)-f(t,y)}\leq K\norm{x-y}\]
 		per a tot \((t,x)\) i \((t,y)\) de \(\Omega\). Aleshores direm que \(f\) és Lipschitz respecte la segona variable.
 	\end{definition}
+	\begin{example}
+		\label{ex:els polinomis són funcions Lipschitz respecte la segona variable}
+		Volem veure que els polinomis són funcions Lipschitz respecte la segona variable.
+		\begin{solution}
+			%TODO
+		\end{solution}
+	\end{example}
 	\begin{theorem}[Teorema de Picard]
 		\labelname{Teorema de Picard}\label{thm:Teorema de Picard}
 		Siguin \(a\), \(b\) i \(t_{0}\) tres reals, \(x_{0}\) un punt de \(\mathbb{R}^{n}\), \(\Omega=[t_{0}-a,t_{0}+a]\times\overline{\bola}(x_{0},b)\) un conjunt, \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció contínua i Lipschitz respecte la segona variable i
@@ -319,9 +328,14 @@
 	\begin{definition}[Família de funcions equicontínua]
 		\labelname{família de funcions equicontínua en un punt}\label{def:família de funcions equicontínua en un punt}
 		\labelname{família de funcions equicontínua}\label{def:família de funcions equicontínua}
+		\labelname{família de funcions uniformement equicontínua}\label{def:família de funcions uniformement equicontínua}
 		Siguin \(H\) un una família de funcions de \(\mathcal{C}_{b}(X,T)\) i \(x\) un punt de \(X\) tal que per a tot \(\varepsilon>0\) existeix un entorn \(N_{x}\) de \(x\) tal que per a tot \(y\) de \(N_{x}\) i \(f\) de \(H\) es satisfà
 		\[\norm{f(y)-f(x)}<\varepsilon.\]
 		Aleshores direm que \(H\) és equicontínua en \(x\). Si \(H\) és equicontínua en \(x\) per a tot \(x\) de \(X\) direm que \(H\) és equicontínua en \(X\).
+		
+		També, si \(\mathcal{C}_{b}(X,T)\) té la distància \(\distancia\) i, per a tot \(\varepsilon>0\) existeix un \(\delta>0\) tal que per a tot \(y\in X\) tal que \(\distancia(x,y)<\delta\), i per a tot \(f\in H\) es satisfà
+		\[\norm{f(x)-f(y)}<\varepsilon.\]
+		Aleshores direm que \(H\) és uniformement equicontínua en \(X\).
 	\end{definition}
 	\begin{lemma}[Teorema d'Arzelà-Ascoli]
 		\labelname{Teorema d'Arzelà-Ascoli}\label{thm:Teorema d'Arzelà-Ascoli}
@@ -393,8 +407,33 @@
 		\end{cases}\]
 		té una solució sobre l'interval
 		\[\left[t_{0}-\min\left\{a,\frac{b}{M}\right\},t_{0}+\min\left\{a,\frac{b}{M}\right\}\right].\]
-		\begin{proof}
-			% https://arxiv.org/pdf/1202.1152.pdf
+		\begin{proof} % https://arxiv.org/pdf/1202.1152.pdf (no)
+			Per a tot \((t,x)\in\Omega\) denotem
+			\[f(t,x)=(f_{1}(t,x),\dots,f_{n}(t,x)).\]
+			Aleshores pel \myref{thm:Teorema d'aproximació polinòmica d'Stone-Weierstrass} trobem que existeixen \(n\) successions de polinomis \(\{(p_{m}^{i})_{m\in\mathbb{N}}\}_{i=1}^{n}\) tals que \((p_{m}^{i})\) convergeix puntualment a \(f_{i}\) per a tot \(i\in\{1,\dots,n\}\). Per la definició de \myref{def:convergència uniforme} trobem que per a tot \((t,x)\in\Omega\) tenim
+			\[\lim_{m\to\infty}p_{m}^{i}(t,x)=f_{i}(t,x),\]
+			i denotant \(p_{m}(t,x)=(p_{m}^{1}(t,x),\dots,p_{m}^{n}(t,x))\) trobem que
+			\[\lim_{m\to\infty}p_{m}(t,x)=f(t,x).\]
+			Per la definició de \myref{def:límit} trobem que per a tot \(\varepsilon>0\) existeix un \(n_{0}\) tal que per a tot \(m>n_{0}\) es satisfà
+			\[\norm{f(t,x)-p_{m}(t,x)}<\varepsilon,\]
+			per a tot \((t,x)\) de \(\Omega\). Com que, per hipòtesi, tenim que \(\norm{f(t,x)}<M\), trobem que ha de ser \(\norm{p_{m}(t,x)}<M\) per a tot \((t,x)\in\Omega\) i per a tot \(m>n_{0}\).
+			
+			Considerem el problema de Cauchy
+			\[\begin{cases}
+				\displaystyle\frac{\partial u(t)}{\partial t}=p_{m}(t,u(t)) \\
+				\displaystyle u(t_{0})=x_{0}.
+			\end{cases}\]
+			Com que \(p_{m}\) és un polinomi, per l'exemple \myref{ex:els polinomis són funcions Lipschitz respecte la segona variable} trobem que \(p_{m}\) és Lipschitz respecte la segona variable, i pel \myref{thm:Teorema de Picard} trobem que, per a tot \(m>n_{0}\) aquest problema de Cauchy té una única solució, \(\varphi_{m}\), definida sobre l'interval
+			\[I=\left[t_{0}-\min\left\{a,\frac{b}{M}\right\},t_{0}+\min\left\{a,\frac{b}{M}\right\}\right].\]
+			
+			Observem que, per a tot \(m>n_{0}\) i per a tot \(t\in I\), tenim que \(\varphi_{m}(t)\in\overline{\bola}(x_{0},b)\), i per la definició de \ref{def:bola} trobem que
+			\[\norm{\varphi_{m}(t)}\leq\norm{x_{0}}+b.\]
+			Aleshores per la definició de \myref{def:família de funcions puntualment acotada} trobem que la successió de funcions \((\varphi_{m+n_{0}})_{m\in\mathbb{N}}\) és una família de funcions puntualment acotada.
+			
+			Fixem un \(\varepsilon>0\) i prenem dos \(t\) i \(t'\) de \(I\) tals que \(\abs{t,t'}<\frac{\varepsilon}{M}\). Aleshores per a tot \(m>n_{0}\) tenim que
+			\[\norm{\varphi_{m}(t)-\varphi_{m}(t')}=\norm{\int_{t'}^{t}}\]
+			
+			\myref{def:família de funcions uniformement equicontínua}.
 		\end{proof}
 	\end{theorem}
 	\begin{corollary}
